fixed image spacing on mobile devices

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -82,12 +82,11 @@ p {
 }
 
 .about-section {
-  padding: 160px 20px;
+  padding: 120px 20px; /*160px 20px*/
 }
 .about-section h1 {
   font-size: 64px;
   line-height: 80px;
-  margin-top: -20px;
 }
 
 .about-section h2 {
@@ -100,7 +99,7 @@ p {
 }
 
 .joelle-photo {
-  border-radius: 25px;
+  border-radius: 60px;
 }
 
 @media (max-width: 900px) {
